      It may also help improve behaviour when dealing with a server running
      on a specific port (rather than dynamically assigned ports).
      (Robert Collins)

    * Move most SmartServer code into a new package, bzrlib/smart.
      bzrlib/transport/remote.py contains just the Transport classes that used
      to be in bzrlib/transport/smart.py.  (Andrew Bennetts)
 
  BUGFIXES:

    * Don't fail bundle selftest if email has 'two' embedded.  
      (#98510, Ian Clatworthy)

    * Remove ``--verbose`` from ``bzr bundle``. It didn't work anyway.
      (Robert Widhopf-Fenk, #98591)

    * Remove ``--basis`` from the checkout/branch commands - it didn't work
      properly and is no longer beneficial. Fixes #53675 and #43486.
      (Robert Collins)

    * Don't produce encoding error when adding duplicate files.
      (Aaron Bentley)

  TESTING:

    * Added ``bzrlib.strace.strace`` which will strace a single callable and
      return a StraceResult object which contains just the syscalls involved
      in running it. (Robert Collins)

    * New test method ``reduceLockdirTimeout`` to drop the default (ui-centric)
      default time down to one suitable for tests. (Andrew Bennetts)

    * Add new vfs_transport_factory attribute on tests which provides the 
      common vfs backing for both the readonly and readwrite transports.
      This allows the RemoteObject tests to back onto local disk or memory,
      and use the existing transport_server attribute all tests know about
      to be the smart server transport. This in turn allows tests to 
      differentiate between 'transport to access the branch', and 
      'transport which is a VFS' - which matters in Remote* tests.
      (Robert Collins, Andrew Bennetts)

    * The ``make_branch_and_tree`` method for tests will now create a 
      lightweight checkout for the tree if the vfs_transport_factory is not
      a LocalURLServer. (Robert Collins, Andrew Bennetts)
